[gd_scene load_steps=6 format=3 uid="uid://f47u5spls1q4"]

[ext_resource type="Theme" uid="uid://dudh2k1jjvgdk" path="res://themes/default_theme.tres" id="1_enftr"]
[ext_resource type="Script" uid="uid://cvkg4u2uux7os" path="res://scripts/ui/player_menu.gd" id="2_01phm"]
[ext_resource type="PackedScene" uid="uid://icwpnu4canmm" path="res://scenes/ui/player_panel.tscn" id="3_pphos"]
[ext_resource type="PackedScene" uid="uid://o018hjpcyot8" path="res://scenes/ui/money_panel.tscn" id="5_pphos"]
[ext_resource type="PackedScene" uid="uid://cw6cd5pihyy2a" path="res://scenes/ui/world_panel.tscn" id="6_pg55v"]

[node name="PlayerMenu" type="Control" node_paths=PackedStringArray("side_menu")]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 0.5
theme = ExtResource("1_enftr")
script = ExtResource("2_01phm")
side_menu = NodePath("SidePanelContainer/VBoxContainer")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MainPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_bottom = 216.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PlayerPanel" parent="MainPanelContainer/VBoxContainer/MarginContainer" instance=ExtResource("3_pphos")]
layout_mode = 2

[node name="ActionsGridContainer" type="GridContainer" parent="MainPanelContainer"]
visible = false
layout_mode = 2
columns = 2

[node name="PinchCheekButton" type="Button" parent="MainPanelContainer/ActionsGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = " "

[node name="PinchCheekLabel" type="Label" parent="MainPanelContainer/ActionsGridContainer/PinchCheekButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Pinch Cheek"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectsGridContainer" type="GridContainer" parent="MainPanelContainer"]
visible = false
layout_mode = 2
columns = 2

[node name="SidePanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 88.0
offset_bottom = 72.0

[node name="VBoxContainer" type="VBoxContainer" parent="SidePanelContainer"]
layout_mode = 2
alignment = 1

[node name="EffectsButton" type="Button" parent="SidePanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../ActionsButton")
focus_next = NodePath("../ActionsButton")
focus_previous = NodePath("../QuitButton")
text = " "

[node name="EffectsLabel" type="Label" parent="SidePanelContainer/VBoxContainer/EffectsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Effects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionsButton" type="Button" parent="SidePanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../EffectsButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../TravelButton")
focus_next = NodePath("../TravelButton")
focus_previous = NodePath("../EffectsButton")
text = " "

[node name="ActionsLabel" type="Label" parent="SidePanelContainer/VBoxContainer/ActionsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Actions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TravelButton" type="Button" parent="SidePanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../ActionsButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../ActionsButton")
text = " "

[node name="TravelLabel" type="Label" parent="SidePanelContainer/VBoxContainer/TravelButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Travel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="Button" parent="SidePanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../TravelButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../TravelButton")
text = " "

[node name="SettingsLabel" type="Label" parent="SidePanelContainer/VBoxContainer/SettingsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="SidePanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../EffectsButton")
focus_next = NodePath("../EffectsButton")
focus_previous = NodePath("../SettingsButton")
text = " "

[node name="QuitLabel" type="Label" parent="SidePanelContainer/VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyPanel" parent="." instance=ExtResource("5_pphos")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -24.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0

[node name="WorldPanel" parent="." instance=ExtResource("6_pg55v")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_right = 232.0
offset_bottom = 0.0
grow_vertical = 0

[connection signal="pressed" from="MainPanelContainer/ActionsGridContainer/PinchCheekButton" to="." method="_on_pinch_cheek_button_pressed"]
[connection signal="pressed" from="SidePanelContainer/VBoxContainer/EffectsButton" to="." method="_on_effects_button_pressed"]
[connection signal="pressed" from="SidePanelContainer/VBoxContainer/ActionsButton" to="." method="_on_actions_button_pressed"]
[connection signal="pressed" from="SidePanelContainer/VBoxContainer/TravelButton" to="." method="_on_travel_button_pressed"]
[connection signal="pressed" from="SidePanelContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SidePanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
